@@ -40,6 +40,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #11657: Fix sending file descriptors over 255 over a multiprocessing
+  Pipe.
+
 - Issue #12213: Fix a buffering bug with interleaved reads and writes that
   could appear on io.BufferedRandom streams.
 
